Details button css v align fix

--- a/src/scss/components/_details.scss
+++ b/src/scss/components/_details.scss
@@ -42,6 +42,7 @@
     &-focus {
         display: inline-flex;
         flex-direction: row;
+        align-items: center;
         color: var(--link-colour);
         font-weight: 400;
     }
